verificacao de html e add CIpython.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Echo a hello world
-      run: echo "Hello World"
+    - name: Check HTML file
+      run: |
+        if [ -f index.html ]; then 
+          echo "index.html exists."
+        else
+          echo "index.html does not exist."
+          exit 1
+        fi
